--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -100,5 +100,9 @@
         {{- end}}
 
         </div>
+        {{- if eq $.Site.LanguageCode "ja-jp" }}
+            {{- partial "cybozudaysbanner.html" . }}
+        {{- end }}
     </header>
+
 
