--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -296,7 +296,7 @@ li .lang-title {
 }
 /* -------------------- end of Language selector */
 .page-pad {
-    height: 94px;
+    height: 107px;
 }
 .page {
     display: flex;
@@ -799,6 +799,7 @@ h6 + .id-link-button {
 
 /* tree navigation -------------------- */
 .tree-wrap {
+    top:10px;
     height: 100%;
     line-height: 1.2em;
     font-size: .95rem;
@@ -2309,7 +2310,7 @@ i.index-pdf {
     }
 
     .page-pad {
-        height: 56px;
+        height: 107px;
     }
     .page {
         flex-direction: row;
