--- a/layouts/partials/cybozudaysbanner.html
+++ b/layouts/partials/cybozudaysbanner.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="right">
-            <a class="btn black" href="https://days.cybozu.co.jp/?u=kintonehelp" target="_blank" rel="noopener noreferrer">Cybozu Days 公式サイトへ</a>
+            <a class="btn black" target="_blank" href="https://days.cybozu.co.jp/?u=kintonehelp" target="_blank" rel="noopener noreferrer">Cybozu Days 公式サイトへ</a>
         </div>
     </div>
 </div>
