--- a/layouts/partials/cybozudaysbanner.html
+++ b/layouts/partials/cybozudaysbanner.html
@@ -2,14 +2,14 @@
     <div class="content">
         <img src="/k/img-ja/logo_days.png" alt="Cybozu Days" class="logo-days"/>
         <div class="left">
-            <p class="text">Cybozu Days 2025  参加申し込み受付中</p>
+            <p class="text">Cybozu Days 2025  kintoneを使うなら外せない特別な2日間</p>
             <div class="box">
                 <p><i class="fas fa-calendar" aria-hidden="true" style="color: gray; margin-right: 0px;"></i> 2025年10月27日～28日</p>
-                <p><i class="fas fa-map-marker-alt" aria-hidden="true" style="color: gray; margin-right: 0px;  margin-right: 0px"></i> 幕張メッセ 国際展示場 4-7ホール</p>
+                <p><i class="fas fa-map-marker-alt" aria-hidden="true" style="color: gray; margin-right: 0px;  margin-right: 0px"></i> 幕張メッセ</p>
             </div>
         </div>
         <div class="right">
-            <a class="btn black" target="_blank" href="https://days.cybozu.co.jp/?u=kintonehelp" target="_blank" rel="noopener noreferrer">Cybozu Days 公式サイトへ</a>
+            <a class="btn black" target="_blank" href="https://days.cybozu.co.jp/?u=kintonehelp" target="_blank" rel="noopener noreferrer">Cybozu Days 公式サイト</a>
         </div>
     </div>
 </div>
