--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -100,7 +100,7 @@
         {{- end}}
 
         </div>
-        {{- if eq $.Site.LanguageCode "ja-jp" }}
+        {{- if and (eq $.Site.LanguageCode "ja-jp") (eq .Site.Params.product "kintone") }}
             {{- partial "cybozudaysbanner.html" . }}
         {{- end }}
     </header>
